--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voyage LeSIEUR</title>
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- link font -->
     <!-- link font -->
     <!-- link font -->
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="js/scripts.js" defer></script>
   </head>
 
   <body>
-    <nav>
+    <header>
       <div class="wrapper">
         <img src="images/logo.svg" alt="logo Voyage LeSIEUR" />
         <p>Voyage LeSIEUR</p>
-        <ul>
-          <li><a href="#">Magasiner</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>
+        <nav>
+          <ul>
+            <li><a href="#">Magasiner</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </nav>
       </div>
-    </nav>
+    </header>
 
     <section class="hero">
       <div class="wrapper">
@@ -36,7 +38,7 @@
       <div class="wrapper">
         <section class="recherche">
           <p>Transports</p>
-          <img src="images/icone.svg" alt="icone plus" class="js-plus"/>
+          <img src="images/icone.svg" alt="icone plus" class="js-plus" />
         </section>
 
         <section class="forfaits">
@@ -67,12 +69,14 @@
         <nav class="menu-social">
           <ul>
             <li class="facebook">
-              <a href="images/facebook.svg"
-                ><img src="images/facebook.svg" alt="logo facebook"
-              /></a>
+              <a href="#"><img src="images/facebook.svg" alt="facebook" /></a>
             </li>
-            <li class="twitter"><a href="images/twitter.svg"></a></li>
-            <li class="linkedin"><a href="images/linkedin.svg"></a></li>
+            <li class="twitter">
+              <a href="#"><img src="images/twitter.svg" alt="twitter" /></a>
+            </li>
+            <li class="linkedin">
+              <a href="#"><img src="images/linkedin.svg" alt="linkedin" /></a>
+            </li>
           </ul>
         </nav>
       </div>
