ajout element + content

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <body>
   <!-- Header -->
-  <nav>
+  <nav class="menu-nav">
     <div class="wrapper">
       <a href="#">
-        <img src="images/logo.svg" alt="logo Voyage LeSIEUR" />
+        <img class="logo" src="images/logo.svg" alt="logo Voyage LeSIEUR" />
         Voyage LeSIEUR
       </a>
 
@@ -47,34 +47,36 @@
 
 
   <!-- contenu -->
-  <div class="content">
+  <section class="content">
     <div class="wrapper">
+      
       <section class="recherche">
         <h2>Transports</h2>
         <img src="images/icone.svg" alt="icone plus" class="js-plus" />
       </section>
 
       <section class="forfaits">
+
         <div class="contenu">
           <img src="images/avion.jpg" alt="avion" />
-          <h3>forfaits <span class="bold">avion</span></h3>
+          <h3>Forfaits <span class="bold">avion</span></h3>
           <p>Voyager rapidement et confortablement</p>
         </div>
 
         <div class="contenu">
           <img src="images/bateau.jpg" alt="bateau" />
-          <h3>forfaits <span class="bold">croisière</span></h3>
+          <h3>Forfaits <span class="bold">croisière</span></h3>
           <p>Laissez-vous transporter par les vagues</p>
         </div>
 
         <div class="contenu">
           <img src="images/auto.jpg" alt="auto" />
-          <h3>forfait <span class="bold">voiture</span></h3>
+          <h3>Forfait <span class="bold">voiture</span></h3>
           <p>Voitures de luxe pour plus de confort</p>
         </div>
       </section>
     </div>
-  </div>
+  </section>
 
 
   <!-- Footer -->
